tools/tests/ui/fail/l1060.cnf
// Test file for error code: L1060
// Expected error: Overflow Duplicate character in control flow -- expected valid UTF-8 encoding
// Category: Syntax
// Layer: 1 (Lexer)

IDENTIFICATION DIVISION.
    PROGRAM "test-overflow".
EVIRONMENT DIVISION.
    OS "invalid™utf8-chars".
